# lab6

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
